<resources>
    <string name="app_name">Breath Training</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Breath Training</string>
    <string name="nav_header_subtitle">breathtraining@jeisfeld.de</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_exercise">Exercise</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_stored_exercises">Stored Exercises</string>

    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_ok">OK</string>
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_rename">Rename</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_edit">Edit</string>
    <string name="button_set_value">Set Value</string>
    <string name="button_user_measured_values">Use measured values</string>

    <string name="text_inhale">Inhale…</string>
    <string name="text_exhale">Exhale…</string>
    <string name="text_hold">Hold…</string>
    <string name="text_relax">Relax…</string>
    <string name="text_starting">Starting…</string>
    <string name="text_stopping">Stopping…</string>
    <string name="text_pausing">Pausing…</string>
    <string name="text_resuming">Resuming…</string>
    <string name="text_skipping">Skipping…</string>

    <string name="title_dialog_confirmation">Confirmation</string>

    <string name="text_exercise_name">Exercise name:</string>
    <string name="text_repetitions">Repetitions:</string>
    <string name="text_breath_start_duration">Start Duration:</string>
    <string name="text_breath_end_duration">End Duration:</string>
    <string name="text_in_out_relation">In/Out Relation:</string>
    <string name="text_hold_breath">Hold Breath:</string>
    <string name="text_checkbox_hold_in">In</string>
    <string name="text_hold_in_start_duration">H In Start Dur:</string>
    <string name="text_hold_in_end_duration">H In End Dur:</string>
    <string name="text_hold_in_position">H In Position:</string>
    <string name="text_checkbox_hold_out">Out</string>
    <string name="text_hold_out_start_duration">H Out Start Dur:</string>
    <string name="text_hold_out_end_duration">H Out End Dur:</string>
    <string name="text_hold_out_position">H Out Position:</string>
    <string name="text_hold_variation">Hold Variation:</string>
    <string name="text_sound_type">Sound:</string>
    <string name="text_current_repetition">Repetition:</string>
    <string name="formatting_current_repetition">%1$s\n\n%2$s</string>

    <string name="title_edit_value">Edit value</string>
    <string name="text_edit_repetitions">Set number of repetitions</string>
    <string name="text_edit_breath_start_duration">Set breath start duration (s)</string>
    <string name="text_edit_breath_end_duration">Set breath end duration (s)</string>
    <string name="text_edit_in_out_relation">Set in/out relation (%%)</string>
    <string name="text_edit_hold_in_start_duration">Set hold in start duration (s)</string>
    <string name="text_edit_hold_in_end_duration">Set hold in end duration (s)</string>
    <string name="text_edit_hold_out_start_duration">Set hold out start duration (s)</string>
    <string name="text_edit_hold_out_end_duration">Set hold out end duration (s)</string>
    <string name="text_edit_hold_variation">Set hold variation (%%)</string>

    <string name="key_exercise_name">exercise_name</string>
    <string name="key_exercise_type">exercise_type</string>
    <string name="key_repetitions">repetitions</string>
    <string name="key_breath_start_duration">breath_start_duration</string>
    <string name="key_breath_end_duration">breath_end_duration</string>
    <string name="key_in_out_relation">in_out_relation</string>
    <string name="key_hold_breath_in">hold_breath_in</string>
    <string name="key_hold_in_start_duration">hold_in_start_duration</string>
    <string name="key_hold_in_end_duration">hold_in_end_duration</string>
    <string name="key_hold_in_position">hold_in_position</string>
    <string name="key_hold_breath_out">hold_breath_out</string>
    <string name="key_hold_out_start_duration">hold_out_start_duration</string>
    <string name="key_hold_out_end_duration">hold_out_end_duration</string>
    <string name="key_hold_out_position">hold_out_position</string>
    <string name="key_hold_variation">hold_variation</string>
    <string name="key_sound_type">sound_type</string>

    <string name="key_stored_exercise_max_id">stored_exercise_max_id</string>
    <string name="key_stored_exercise_ids">stored_exercise_ids</string>
    <string name="key_stored_exercise_name">stored_exercise_name</string>
    <string name="key_stored_exercise_type">stored_exercise_type</string>
    <string name="key_stored_repetitions">stored_repetitions</string>
    <string name="key_stored_breath_start_duration">stored_breath_start_duration</string>
    <string name="key_stored_breath_end_duration">stored_breath_end_duration</string>
    <string name="key_stored_in_out_relation">stored_in_out_relation</string>
    <string name="key_stored_hold_breath_in">stored_hold_breath_in</string>
    <string name="key_stored_hold_in_start_duration">stored_hold_in_start_duration</string>
    <string name="key_stored_hold_in_end_duration">stored_hold_in_end_duration</string>
    <string name="key_stored_hold_in_position">stored_hold_in_position</string>
    <string name="key_stored_hold_breath_out">stored_hold_breath_out</string>
    <string name="key_stored_hold_out_start_duration">stored_hold_out_start_duration</string>
    <string name="key_stored_hold_out_end_duration">stored_hold_out_end_duration</string>
    <string name="key_stored_hold_out_position">stored_hold_out_position</string>
    <string name="key_stored_hold_variation">stored_hold_variation</string>
    <string name="key_stored_sound_type">stored_sound_type</string>

    <string name="message_measure">Press “Start” after exhaling to start the measurement of breath duration.\n\nThen press the big full-screen button whenever changing between inhaling and exhaling.</string>
    <string name="message_measurement_too_short">Measurement was too short.\n\nInhale and exhale at least once before stopping the measurement.</string>
    <string name="message_measurement_result_1">Last measurement result:\n\nAverage breath duration: %1$.1fs\n\nIn-out relation: %2$.0f%%</string>
    <string name="message_measurement_result_2">For another measurement, press “Start” after breathing out.\n\nThen press the big full-screen button whenever changing between inhaling and exhaling.</string>
    <string name="message_disable_doze">Please disable doze mode for this app. This allows the exercises running reliably in background.</string>
    <string name="title_disable_doze">Disable doze</string>

    <string name="title_did_not_save_empty_name">Missing Name</string>
    <string name="message_did_not_save_empty_name">Did not save - name was empty.</string>
    <string name="title_dialog_change_exercise_name">Change Exercise Name</string>
    <string name="message_dialog_new_exercise_name">New Exercise Name:</string>
    <string name="title_dialog_save_exercise">Save Exercise</string>
    <string name="message_dialog_save_exercise">Exercise Name:</string>
    <string name="message_confirm_delete_exercise">Do you want to delete the exercise “%1$s” from the storage?</string>
    <string name="message_confirm_overwrite_exercise">Do you want to overwrite the exercise “%1$s” with new settings?</string>

    <string name="notification_channel">Breath Training</string>
    <string name="notification_title_exercise">Breath Training Exercise</string>
    <string name="notification_text_exercise_running">Exercise Started</string>


    <string-array name="values_exercise_type">
        <item>Standard Breath Training</item>
    </string-array>
    <string-array name="values_sound_type">
        <item>None</item>
        <item>Text</item>
        <item>Breath</item>
    </string-array>
    <string-array name="values_hold_position">
        <item>Only at breath end</item>
        <item>One intermittent hold</item>
        <item>Two intermittent holds</item>
        <item>Variable intermittent holds</item>
    </string-array>
</resources>