<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_exercise">

    <fragment
        android:id="@+id/nav_exercise"
        android:name="de.jeisfeld.breathtraining.exercise.ExerciseFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/nav_measure"
        android:name="de.jeisfeld.breathtraining.measure.MeasureFragment"
        android:label="@string/menu_measure"
        tools:layout="@layout/fragment_measure" />

    <fragment
        android:id="@+id/nav_stored_exercises"
        android:name="de.jeisfeld.breathtraining.repository.StoredExercisesFragment"
        android:label="@string/menu_stored_exercises"
        tools:layout="@layout/fragment_stored_exercises" />
</navigation>