<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/notification_padding">

    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="@dimen/notification_button_size"
        android:layout_height="@dimen/notification_button_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/color_primary"
        android:contentDescription="@string/button_pause"
        android:src="@drawable/ic_button_pause" />

    <ImageButton
        android:id="@+id/button_resume"
        android:layout_width="@dimen/notification_button_size"
        android:layout_height="@dimen/notification_button_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/color_primary"
        android:contentDescription="@string/button_resume"
        android:src="@drawable/ic_button_start_light"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/button_stop"
        android:layout_width="@dimen/notification_button_size"
        android:layout_height="@dimen/notification_button_size"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/notification_padding"
        android:layout_toStartOf="@id/button_pause"
        android:background="@color/color_primary"
        android:contentDescription="@string/button_stop"
        android:src="@drawable/ic_button_stop"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/icon_breathtraining"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/button_stop"
        android:layout_toEndOf="@id/icon_breathtraining"
        android:orientation="vertical"
        android:paddingStart="@dimen/notification_padding"
        android:paddingEnd="@dimen/notification_padding">

        <TextView
            android:id="@+id/text_step_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textSize="@dimen/text_xlarge" />

        <TextView
            android:id="@+id/text_step_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textSize="@dimen/text_large" />
    </LinearLayout>
</RelativeLayout>